# recruitment_agency

./: .gitignore  README.md  pyproject.toml
src/recruitment_agency/: crew.py  main.py  utils.py
src/recruitment_agency/config/: agents.yaml  tasks.yaml
src/recruitment_agency/tools/: custom_tool.py
