[project]
name = "recruitment_agency"
version = "0.1.0"
description = "recruitment_agency using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
recruitment_agency = "recruitment_agency.main:run"
run_crew = "recruitment_agency.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
